--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,20 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ingreso Hospital Central</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { background: linear-gradient(135deg, #16222A, #3A6073 90%); min-height: 100vh; }
-    .card-login { max-width: 400px; margin:auto; box-shadow: 0 2px 16px #2226; border-radius: 18px;}
+    .card-auth { max-width: 420px; margin:auto; box-shadow: 0 2px 18px #2227; border-radius: 20px;}
     .hospital-logo { width: 80px; margin-bottom: 16px; }
-    .submit-btn { background: linear-gradient(90deg, #11998e 50%, #38ef7d 100%); border: none; }
+    .submit-btn { background: linear-gradient(90deg, #11998e 50%, #38ef7d 100%); border: none; color: #fff;}
     .submit-btn:hover { background: linear-gradient(90deg, #38ef7d 40%, #11998e 100%); }
+    .alt-link { color: #38ef7d; text-decoration: underline; cursor:pointer; }
   </style>
 </head>
 <body>
   <div class="container py-5">
-    <div class="card card-login p-4">
+    <div class="card card-auth p-4">
       <img src="https://img.icons8.com/stickers/100/hospital-3.png" alt="hospital" class="hospital-logo mx-auto d-block rounded-circle">
       <h3 class="text-center mb-3">Portal Hospital Central</h3>
       <form id="loginForm">
@@ -26,8 +27,8 @@
           <input type="password" class="form-control" id="loginPassword" placeholder="Contraseña" required>
         </div>
         <button type="submit" class="btn submit-btn w-100 mb-2">Ingresar</button>
-        <div class="text-center">
-          <a href="register.html" class="link-light">¿No tienes cuenta? Registrar</a>
+        <div class="text-center mt-2">
+          <a href="register.html" class="alt-link">¿No tienes cuenta? Registrar</a>
         </div>
       </form>
       <div id="loginError" class="alert alert-danger mt-2 d-none"></div>
@@ -38,15 +39,14 @@ document.getElementById("loginForm").addEventListener("submit", async function(e
   e.preventDefault();
   const email = document.getElementById("loginEmail").value;
   const password = document.getElementById("loginPassword").value;
-  const response = await fetch("http://127.0.0.1:5000/api/login", {
-  method: "POST",
-  headers: {"Content-Type":"application/json"},
-  body: JSON.stringify({email, password})
-});
+  const response = await fetch("/api/login", {
+    method: "POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({email, password})
+  });
 
   const data = await response.json();
   if(response.ok){
-    // Guarda token y redirige al dashboard
     localStorage.setItem('token', data.token);
     window.location.href = "dashboard.html";
   }else{
